--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
+		"@hi_digital/easy-flex": "^1.6.4",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
@@ -28,6 +29,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"concurrently": "^7.3.0",
 		"cookie": "^0.4.1",
+		"lazysizes": "^5.3.2",
 		"normalize.css": "^8.0.1"
 	}
 }
