--- a/cms/package.json
+++ b/cms/package.json
@@ -10,16 +10,17 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.1.9",
-    "@strapi/plugin-users-permissions": "4.1.9",
-    "@strapi/strapi": "4.3.6",
-    "better-sqlite3": "7.4.6",
+    "@strapi/plugin-i18n": "^4.3.8",
+    "@strapi/plugin-users-permissions": "^4.3.8",
+    "@strapi/strapi": "^4.3.8",
+    "better-sqlite3": "^7.4.6",
     "strapi-plugin-local-image-sharp": "^1.2.0",
     "strapi-plugin-menus": "^1.0.2"
   },
   "author": {
     "name": "A Strapi developer"
   },
+  "main" : "src/index.js",
   "strapi": {
     "uuid": "b05780eb-e311-44bd-bb4f-5dcec43928e5"
   },
