--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 		"dev": "concurrently vite dev & npm run cms",
 		"cms": "cd cms && npm run develop",
 		"cms-start": "cd cms && npm run start",
-		"build": "vite build",
-		"preview": "vite preview",
+		"cms-build": "cd cms && NODE_ENV=production npm run build",
+		"build": "vite build && npm run cms-build",
+		"preview": "concurrently vite prewview & npm run cms-start",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "eslint .",
@@ -15,6 +16,7 @@
 	"devDependencies": {
 		"@hi_digital/easy-flex": "^1.6.4",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-node": "^1.0.0-next.91",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
 		"eslint": "^8.16.0",
