--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-	"name": "svelte-kit",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "concurrently vite dev & npm run cms",
-		"cms": "cd cms && npm run develop",
-		"cms-start": "cd cms && npm run start",
-		"cms-build": "cd cms && NODE_ENV=production npm run build",
-		"build": "vite build && npm run cms-build",
-		"preview": "concurrently vite prewview & npm run cms-start",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "eslint .",
-		"start": "concurrently vite prewview & npm run cms-start"
-	},
-	"devDependencies": {
-		"@hi_digital/easy-flex": "^1.6.4",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-node": "^1.0.0-next.91",
-		"@sveltejs/kit": "next",
-		"@types/cookie": "^0.5.1",
-		"eslint": "^8.16.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"sass": "^1.54.6",
-		"svelte": "^3.46.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.7",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0-beta.1"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
-		"concurrently": "^7.3.0",
-		"cookie": "^0.4.1",
-		"lazysizes": "^5.3.2",
-		"normalize.css": "^8.0.1"
-	}
+  "name": "cms",
+  "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
+  "scripts": {
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
+  },
+  "dependencies": {
+    "@strapi/plugin-i18n": "^4.3.8",
+    "@strapi/plugin-users-permissions": "^4.3.8",
+    "@strapi/strapi": "^4.3.8",
+    "better-sqlite3": "^7.4.6",
+    "strapi-plugin-local-image-sharp": "^1.2.0",
+    "strapi-plugin-menus": "^1.0.2"
+  },
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "main" : "src/index.js",
+  "strapi": {
+    "uuid": "b05780eb-e311-44bd-bb4f-5dcec43928e5"
+  },
+  "engines": {
+    "node": ">=12.x.x <=16.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
