--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,17 @@
 		"@sveltejs/adapter-node": "^1.0.0-next.91",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.5.1",
+		"autoprefixer": "^10.4.11",
 		"eslint": "^8.16.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"normalize.css": "^8.0.1",
+		"postcss-pxtorem": "^6.0.0",
 		"sass": "^1.54.6",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0-beta.1",
-		"normalize.css": "^8.0.1"
+		"vite": "^3.1.0-beta.1"
 	},
 	"type": "module",
 	"dependencies": {
