--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
+		"aos": "^2.3.4",
 		"cookie": "^0.4.1",
 		"lazysizes": "^5.3.2"
 	}
