--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "build": "concurrently 'strapi build' 'cd frontend && npm run build'",
     "build-production": "concurrently 'NODE_ENV=production strapi build' 'cd frontend && NODE_ENV=production npm run build'",
     "strapi": "strapi",
-    "clean" : "concurrently 'rm -rf build' 'cd frontend && rm -rf build'"
+    "clean": "concurrently 'rm -rf build' 'cd frontend && rm -rf build'"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.3.8",
-    "@strapi/plugin-users-permissions": "^4.3.8",
-    "@strapi/strapi": "^4.3.8",
+    "@strapi/plugin-i18n": "^4.4.1",
+    "@strapi/plugin-users-permissions": "^4.4.1",
+    "@strapi/strapi": "^4.4.1",
     "better-sqlite3": "^7.4.6",
-    "strapi-plugin-local-image-sharp": "^1.2.0",
-    "strapi-plugin-menus": "^1.0.2"
+    "strapi-plugin-local-image-sharp": "^1.2.0"
   },
   "author": {
     "name": "A Strapi developer"
